[tool.poetry]
authors = ["Genomic Data Commons <support@nci-gdc.datacommons.io>"]
description = "A library for managing graph like structures using SQLAlchemy and Postgres DB."
license = "Apache-2.0"
name = "psqlgraph"
version = "0.0.0"

[tool.poetry.dependencies]
SQLAlchemy = { version = ">=1.3.0,<1.4.0", extras = ["postgresql"] }
python = "^3.6.1"
rstr = [
  { version = ">=3.0.0,<3.1.0", python = "<3.7" },
  { version = "^3.2.0", python = ">=3.7" },
]
six = "^1.16.0"
xlocal = "^0.5"

[tool.poetry.group.test.dependencies]
coverage = [
  { version = "^6.2.0", python = "^3.6" },
  { version = "^6.4.0", python = "^3.7" },
]
detect-secrets = "^1.2.0"
pytest = ">=7.0.0,<7.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.17.0,<2.18.0"

[tool.poetry-dynamic-versioning]
dirty = true
enable = true
metadata = true
pattern = "default-unprefixed"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
